--- a/src/homepage/Header.css
+++ b/src/homepage/Header.css
@@ -17,20 +17,20 @@
 }
 
 .profile-circle {
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   background-color: #007bff;
   color: white;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-weight: bold;
   font-size: 18px;
   cursor: pointer;
   user-select: none;
   transition: background-color 0.3s ease;
 }
+
 
 .profile-circle:hover {
   background-color: #0056b3;
@@ -46,6 +46,13 @@
   width: auto;
 }
 
+.menudots{
+  background-color: #007bff00;
+  color: white;
+  border: none;
+  font-size: x-large;
+  cursor: pointer;
+}
 
 .navv {
   position: fixed;
@@ -89,9 +96,29 @@ img {
   justify-content:center ;
   list-style: none;
 }
+
+.navitems .ul2 {
+  display: flex;
+  justify-content:center ;
+  list-style: none;
+  padding: 0;
+}
+
+
+
 .navitems .ul2.left-align{
   justify-self: end;
   display: flex;
+}
+
+.search-input{
+  width: 20vw;
+  height: 30px;
+  border-radius: 15px;
+  border: 1px solid #ccc;
+  padding: 10px;
+  background-color: #d8d8f300;
+  color: #ccc;
 }
 
 .navitems ul li {
